# diabetes-prediction

./: TASKS.md  pyproject.toml  tasks.md
hadoop/: mapper.py  reducer.py  run_pipeline.sh
notebooks/: diabetes_prediction.ipynb
